--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="btn-start">Start</button>
     </div>
     <div>
-        <button id="btn-restart">Restart</button>
+        <button id="btn-reset">Reset</button>
     </div>
 
    
